--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,5 +1,8 @@
 body{
     background-color: #a2a2a2;
+    background-image: url(../Images/main\ background.png);
+    background-repeat: repeat;
+    background-size: 256px, 256px;
 }
 
 .content{
@@ -15,19 +18,7 @@ body{
 }
 
 .titulo{
-    font-family: fantasy;
-    text-decoration: none;
-    display: flex;
-    justify-content: center;
-    font-weight: lighter;
-    font-size: 48px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: #ffffff;
+    margin-top: 16px;
 }
 
 .fast_search{
@@ -84,7 +75,7 @@ body{
     justify-content: center;
     text-decoration: none;
     font-size: 16px;
-    width: 128px;    
+    width: 130px;    
     margin-left: 4px;
     padding-top: 4px;
     padding-bottom: 4px;
