--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,4 +1,6 @@
 body{
+    display: flex;
+    flex-direction: column;
     background-color: #a2a2a2;
     background-image: url(../Images/main\ background.png);
     background-repeat: repeat;
@@ -62,7 +64,6 @@ body{
 
 .links_bar{
     display: flex;
-    justify-content: left;
     width: 100%;
     box-shadow: 0px 4px 4px #2336bb;
     background-color: #3068ff;
@@ -85,14 +86,11 @@ body{
 
 .mid{
     display: flex;
-    flex-direction: row;
-    height: 2000px;
 }
 
 .mid_left{
     display: flex;
     flex-direction: column;
-    width: 16%;
     margin-top: 16px;
     box-shadow: 2px 2px 4px #2336bb, 2px -2px 4px #2336bb;
     background-color: #7298ff;
@@ -121,9 +119,7 @@ body{
 }
 
 .mid_right{
-    width: 100%;
     margin-top: 16px;
-    margin-left: 16px;
     box-shadow: -2px 2px 4px #2336bb, -2px -2px 4px #2336bb;
     color: #ffffff; 
     background-color: #7298ff;
@@ -142,3 +138,53 @@ body{
 /*---------------------------------------*/
 /*             ADAPTATION                */
 /*---------------------------------------*/
+@media screen and (max-height: 100px){
+    .top{
+        flex-direction: row;
+    }
+    .titulo img{
+        height: 100%;
+        width: 100%;
+    }
+    .links_bar{
+        flex-direction: row;
+        justify-content: left;
+        justify-items: left;
+    }
+    .mid{
+        flex-direction: row;
+        height: 2000px;
+    }
+    .mid_left{
+        width: 16%;
+    }
+    .mid_right{
+        margin-left: 16px;
+        width: 80%;
+    }   
+}
+@media screen and (max-height: 500px){
+    .top{
+        flex-direction: column;
+    }
+    .titulo img{
+        height: 100%;
+        width: 100%;
+    }
+    .links_bar{
+        flex-direction: column;
+        justify-content: center;
+        justify-items: center;
+    }
+    .mid{
+        flex-direction: column;
+        height: 100%;
+    } 
+    .mid_left{
+        width: 100%;
+    }
+    .mid_right{
+        margin-left: 0px;
+        width: 100%;
+    }     
+}
